# zvec-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
bundle/: manifest.json
bundle/server/: main.py
src/zvec_mcp/: __init__.py  config.py  embeddings.py  knowledge.py  memory.py  server.py
