[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zvec-mcp"
version = "0.1.0"
description = "Claude Code MCP server for RAG and memory powered by zvec"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "cluster2600" },
]
keywords = ["mcp", "claude", "rag", "memory", "vector-database", "zvec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "zvec",
    "sentence-transformers>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/cluster2600/zvec-mcp"
Repository = "https://github.com/cluster2600/zvec-mcp"
Issues = "https://github.com/cluster2600/zvec-mcp/issues"

[project.scripts]
zvec-mcp = "zvec_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zvec_mcp"]
